--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "bootstrap": "^4.2.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
