--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest:cache": "jest --clearCache"
   },
   "dependencies": {
+    "antd": "^3.13.2",
     "bootstrap": "^4.2.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "express": "^4.16.4",
@@ -26,6 +27,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
+    "react-rating": "^1.6.2",
     "sequelize": "^4.42.0"
   },
   "devDependencies": {
