--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "antd": "^3.13.2",
     "bootstrap": "^4.2.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jest-enzyme": "^7.0.1",
     "jquery": "^3.3.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
@@ -45,6 +46,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.1.0",
     "jsdom": "^13.2.0",
