--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ node_js:
 cache:
   directories:
     - "node_modules"
+before_install:
+  - openssl aes-256-cbc -K $encrypted_4aa93aae2784_key -iv $encrypted_4aa93aae2784_iv -in config.js.enc -out config.js -d
