--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
-  - "6.13.0"
+- 6.13.0
 cache:
   directories:
-    - "node_modules"
+  - node_modules
 before_install:
-  - openssl aes-256-cbc -K $encrypted_4aa93aae2784_key -iv $encrypted_4aa93aae2784_iv -in config.js.enc -out config.js -d
+- openssl aes-256-cbc -K $encrypted_4aa93aae2784_key -iv $encrypted_4aa93aae2784_iv
+  -in config.js.enc -out config.js -d
