--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_4aa93aae2784_key -iv $encrypted_4aa93aae2784_iv
   -in config.js.enc -out config.js -d
-- mysql -u root -e 'CREATE DATABASE adidas;'
+- mysql -u root < database/schema.sql
 - node database/seed.js
