Set travis ci env var to TEST

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: node_js
+env:
+- NODE_ENV=test
 node_js:
 - 6.13.0
 services:
@@ -9,5 +11,5 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_4aa93aae2784_key -iv $encrypted_4aa93aae2784_iv
   -in config.js.enc -out config.js -d
-# - mysql -u root < database/schema.sql
-# - node database/seed.js
+- mysql -u root < database/schema.sql
+- node database/seed.js
