Add moduleDirectories to package.json

--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/"
     ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
