--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "jest-enzyme": "^7.0.1",
     "jquery": "^3.3.1",
+    "knex": "^0.16.3",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "prop-types": "^15.7.2",
