--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest-enzyme": "^7.0.1",
     "jquery": "^3.3.1",
     "knex": "^0.16.3",
+    "mongoose": "^5.4.16",
     "mysql": "^2.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
