--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ env:
 node_js:
 - 6.13.0
 services:
-  - mysql
+  - mongodb
 cache:
   directories:
   - node_modules
-before_script:
-- mysql -e 'create database adidasnewtest;' -u root
+# before_script:
+# - mysql -e 'create database adidasnewtest;' -u root
 before_install:
 - openssl aes-256-cbc -K $encrypted_4aa93aae2784_key -iv $encrypted_4aa93aae2784_iv
   -in config.js.enc -out config.js -d
