--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^24.1.0",
     "jsdom": "^13.2.0",
     "request": "^2.88.0",
+    "newrelic": "^5.6.0",
     "supertest": "^3.4.2",
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.3"
