--- a/loadtest.yml
+++ b/loadtest.yml
@@ -1,12 +1,12 @@
 config:
-  target: 'http://localhost:8001'
+  target: 'http://ec2-54-165-205-234.compute-1.amazonaws.com:8001/'
   processor: './loadtestFunc.js'
   phases:
     - duration: 60
       arrivalCount: 5
       name: 'Warm up the application'
     - duration: 60
-      arrivalRate: 1
+      arrivalCount: 1
       name: 'ready for ramp'
     - duration: 1200
       arrivalRate: 1
