--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start:dev": "nodemon server/index.js",
-    "start": "node server/index.js",
+    "start:dev": "nodemon server/serverbundle.js",
+    "start": "node server/serverbundle.js",
     "react:dev": "webpack -d --watch",
     "db:setup": "node database/seedNoSql.js",
     "test": "jest --forceExit",
@@ -38,7 +38,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "jest-enzyme": "^7.0.1",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
@@ -48,13 +48,18 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
+    "isomorphic-style-loader": "^5.0.1",
     "jest": "^24.1.0",
+    "jest-enzyme": "^7.0.1",
     "jsdom": "^13.2.0",
-    "request": "^2.88.0",
     "newrelic": "^5.6.0",
+    "postcss-loader": "^3.0.0",
+    "request": "^2.88.0",
     "supertest": "^3.4.2",
     "webpack": "^4.29.1",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "jest": {
     "verbose": true,
