--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "antd": "^3.13.2",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -56,7 +57,6 @@
     "jest": "^24.1.0",
     "jest-enzyme": "^7.0.1",
     "jsdom": "^13.2.0",
-    "newrelic": "^5.6.0",
     "postcss-loader": "^3.0.0",
     "request": "^2.88.0",
     "supertest": "^3.4.2",
